[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actflow"
version = "0.1.0"
description = "Task-graph execution with a two-level node model (timed body + timeless controllers)."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["actflow*"]